# 2026-p1-ArthurW4130

./: endpoint.http  pyproject.toml
.github/workflows/: classroom.yml
todo/views/: routes.py
